fix: Resolution of pending issues: Update Cliente and return list of Filhos